--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,6 +15,8 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
+                    <li><a href="#certifications">Certifications</a></li>
+                    <li><a href="#Experience">Experience</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -40,15 +42,15 @@
                     <div class="social-icons">
                         <a href="mailto:ayushtrikmani124@gmail.com"><i class="fas fa-envelope"></i></a>
                         <a href="tel:+916352243970"><i class="fas fa-phone"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/ayush_trikmani110/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/AyushTrikmani"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/ayush-trikmani-7b4254269/"><i class="fab fa-linkedin"></i></a>
                     </div>
-                    <a href="#" class="btn download-btn">Download Resume</a>
+<a href="./Ayush_Trikmani_Resume%20%284%29.pdf" class="btn download-btn" download>Download Resume</a>
                 </div>
                 <div class="hero-image">
                     <div class="image-wrapper">
-                        <img src="https://via.placeholder.com/400x400" alt="Ayush Trikmani" class="profile-img">
+                        <img src="./myface.jpg" alt="Ayush Trikmani" class="profile-img">
                         <div class="blob"></div>
                     </div>
                 </div>
@@ -62,7 +64,7 @@
             <h2 class="section-title">About <span>Me</span></h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="https://via.placeholder.com/400x400" alt="Ayush Trikmani">
+                    <img src="./myface.jpg" alt="Ayush Trikmani">
                 </div>
                 <div class="about-text">
                     <h3>Computer Science Engineer</h3>
@@ -77,18 +79,47 @@
                         </div>
                     </div>
                     
-                    <div class="certifications">
-                        <h4>Certifications</h4>
-                        <div class="cert-item">
-                            <h5>Intel AI For Manufacturing</h5>
-                            <p>Feb 2025 – Present | Intel India & Gujarat Technological University</p>
-                            <p>16-week program covering AI Programming, Computer Vision, Predictive Maintenance, and more.</p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <section id="certifications" class="certifications" style="min-height: auto; padding-top: 12rem; padding-bottom: 6rem;">
+        <div class="container">
+            <h2 class="section-title">Certifications</h2>
+            <div class="certifications">
+                <h3 style="font-size: 2.8rem; margin-bottom: 1rem;">Courses</h3>
+                <div class="cert-item" style="font-size: 1.8rem; padding: 2rem; border-radius: 2rem; box-shadow: 0 0 1.5rem var(--primary-color); margin-bottom: 3rem;">
+                    <h4>Intel AI For Manufacturing</h4>
+                    <p><strong>Feb 2025 – Present</strong> | Intel India & Gujarat Technological University</p>
+                    <p>16-week program covering AI Programming, Computer Vision, Predictive Maintenance, and more.</p>
+                </div>
+                
+                <div class="cert-item" style="font-size: 1.8rem; padding: 2rem; border-radius: 2rem; box-shadow: 0 0 1.5rem var(--primary-color);">
+                    <h4>SAP Code Unnati – Emerging Technologies Training</h4>
+                    <p><strong>Jul 2024 – Jun 2025 </strong>| SAP India, Edunet Foundation & Ahmedabad Institute of Technology</p>
+<p>Advanced training in Machine Learning, Internet of Things, Deep Learning, Computer Vision, and SAP ABAP on the Business Technology Platform (BTP) under the CSR initiative Code Unnati.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="Experience" class="Experience" style=" background: var(--bg-color); min-height: auto; padding-top: 12rem; padding-bottom: 6rem;">
+        <div class="container">
+            <h2 class="section-title">Experience</h2>
+            <div class="certifications">
+                <h3 style="font-size: 2.8rem; margin-bottom: 1rem;">Internship</h3>
+                <div class="cert-item" style="font-size: 1.8rem; padding: 2rem; border-radius: 2rem; box-shadow: 0 0 1.5rem var(--primary-color); margin-bottom: 3rem;">
+                    <h4>Web Development Intern</h4>
+                    <p><strong>June 10, 2025 – July 10, 2025</strong> | Tamizhan Skills (RISE Internship Program)</p>
+                    <p>Online (Remote Project-Based) with real-time project exposure in web development.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Courses & Experience Section -->
+    <!-- Removed as per user request -->
 
     <!-- Skills Section -->
     <section id="skills" class="skills">
@@ -168,7 +199,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <!-- You can use one of your screenshots here, or a placeholder if you prefer -->
-                        <img src="https://via.placeholder.com/600x400?text=AI+Tile+Inspector" alt="AI-Based Tile Defect Detection System">
+                        <img src="./images (4).jpeg" alt="AI-Based Tile Defect Detection System">
                     </div>
                     <div class="project-info">
                         <h3>AI-Based Tile Defect Detection System</h3>
@@ -186,11 +217,11 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/600x400" alt="Fitness Club">
+                        <img src="./about-fitness.jpg" alt="Fitness Club">
                     </div>
                     <div class="project-info">
-                        <h3>Fitness Club</h3>
-                        <p>A full-stack fitness platform offering personalized workout plans, age-based exercise guides, video tutorials, and diet plans.</p>
+                        <h3>Fitness Club</h3><br><br><br>
+                        <p>A comprehensive full-stack fitness platform delivering personalized workout routines, age-specific exercise programs, expert video tutorials, detailed diet plans, confidence-building challenges, and subscription-based health resources.</p>
                         <div class="tech-stack">
                             <span>React.js</span>
                             <span>PHP</span>
@@ -201,30 +232,15 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/600x400" alt="Portfolio Website">
+                        <img src="./myportfolio-230717130538-2f6381ba-thumbnail.jpg" alt="Portfolio Website">
                     </div>
                     <div class="project-info">
-                        <h3>Portfolio Website</h3>
-                        <p>A responsive personal portfolio website showcasing skills, projects, and achievements with modern UI/UX design.</p>
+                        <h3>Portfolio Website</h3><br><br><br>
+                        <p>A fully responsive and interactive personal portfolio website built with modern UI/UX design principles, featuring technical skills, project showcases, career objectives, and a cleanly integrated contact section for professional outreach.</p>
                         <div class="tech-stack">
                             <span>HTML</span>
                             <span>CSS</span>
                             <span>JavaScript</span>
-                        </div>
-                        <a href="#" class="btn">View Project</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="https://via.placeholder.com/600x400" alt="Fire-Fighting Car">
-                    </div>
-                    <div class="project-info">
-                        <h3>Autonomous Bluetooth-controlled Fire-Fighting Car</h3>
-                        <p>A collaborative project to develop an autonomous vehicle capable of detecting and extinguishing fires.</p>
-                        <div class="tech-stack">
-                            <span>Arduino</span>
-                            <span>Bluetooth</span>
-                            <span>IoT</span>
                         </div>
                         <a href="#" class="btn">View Project</a>
                     </div>
@@ -287,49 +303,38 @@
     </section>
 
     <!-- Footer -->
-    <footer class="dev-footer">
-      <div class="footer-content">
-        <!-- Left: Name & Tagline -->
-        <div class="footer-section about">
+    <footer class="glass-footer-ultimate">
+      <div class="gf-ultimate-content">
+        <div class="gf-ultimate-col about">
           <h2>Ayush Trikmani</h2>
-          <p class="footer-tagline">Building digital solutions with code, design, and AI.</p>
+          <p>Crafting digital experiences with code, design, and AI.</p>
         </div>
-        <!-- Center: Navigation -->
-        <div class="footer-section links">
+        <div class="gf-ultimate-col nav">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="index.html#home">Home</a></li>
+            <li><a href="index.html#about">About</a></li>
+            <li><a href="certifications.html">Certifications</a></li>
+            <li><a href="Experience.html">Experience</a></li>
+            <li><a href="index.html#skills">Skills</a></li>
+            <li><a href="index.html#projects">Projects</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
           </ul>
         </div>
-        <!-- Right: Contact & Social -->
-        <div class="footer-section contact">
+        <div class="gf-ultimate-col contact">
           <h3>Contact</h3>
-          <a href="mailto:ayushtrikmani124@gmail.com" class="footer-contact-link">
-            <i class="fas fa-envelope"></i> ayushtrikmani124@gmail.com
-          </a>
-          <a href="tel:+916352243970" class="footer-contact-link">
-            <i class="fas fa-phone"></i> +91 6352243970
-          </a>
-          <div class="footer-social">
-            <a href="https://www.instagram.com/ayush_trikmani110/" target="_blank" aria-label="Instagram">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://github.com/AyushTrikmani" target="_blank" aria-label="GitHub">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/ayush-trikmani-7b4254269/" target="_blank" aria-label="LinkedIn">
-              <i class="fab fa-linkedin"></i>
-            </a>
+          <a href="mailto:ayushtrikmani124@gmail.com"><i class="fas fa-envelope"></i> ayushtrikmani124@gmail.com</a>
+          <a href="tel:+916352243970"><i class="fas fa-phone"></i> +91 6352243970</a>
+          <div class="gf-ultimate-socials">
+            <a href="https://www.instagram.com/ayush_trikmani110/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/AyushTrikmani" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/ayush-trikmani-7b4254269/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
       </div>
-      <div class="footer-divider"></div>
-      <div class="footer-bottom">
-        <p>&copy; 2025 Ayush Trikmani. All Rights Reserved.</p>
+      <div class="gf-ultimate-divider"></div>
+      <div class="gf-ultimate-bottom">
+        &copy; 2025 Ayush Trikmani. All Rights Reserved.
       </div>
     </footer>
 
